force-app/main/default/objects/Confiscated_Item__c/Confiscated_Item__c.object-meta.xml
<CustomObject>
    <label>Confiscated Item</label>
    <nameField>
        <displayFormat>CI-{00000}</displayFormat>
        <label>Confiscated Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Confiscated Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>