force-app/main/default/objects/Confiscated_Item__c/fields/Confiscation_Bag__c.field-meta.xml
<CustomField>
    <fullName>Confiscation_Bag__c</fullName>
    <label>Confiscation Bag</label>
    <referenceTo>Confiscation_Bag__c</referenceTo>
    <relationshipLabel>Confiscated Items</relationshipLabel>
    <relationshipName>Confiscated_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>