force-app/main/default/objects/Confiscated_Item__c/recordTypes/Equipment.recordType-meta.xml
<RecordType>
    <fullName>Equipment</fullName>
    <active>true</active>
    <description>This is an item of type 'Equipment'</description>
    <label>Equipment</label>
</RecordType>