force-app/main/default/objects/Confiscated_Item__c/recordTypes/Garment.recordType-meta.xml
<RecordType>
    <fullName>Garment</fullName>
    <active>true</active>
    <description>This is an item of type 'Garment'</description>
    <label>Garment</label>
</RecordType>