force-app/main/default/objects/Confiscated_Item__c/validationRules/Adding_incorrect_confiscated_items.validationRule-meta.xml
<ValidationRule>
    <fullName>Adding_incorrect_confiscated_items</fullName>
    <active>true</active>
    <description>Alert when an item of type Garment is added to Equipment Bag or vice versa.</description>
    <errorConditionFormula>RecordType.DeveloperName &lt;&gt;  Confiscation_Bag__r.RecordType.DeveloperName</errorConditionFormula>
    <errorMessage>INCORRECT CONFISCATED ITEM TYPE FOR BAG</errorMessage>
</ValidationRule>